added team member logic
